--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <div class="work__item">
                         <a href="CIS310.html" class="work__link">
-                            <img src="\Users\Patrick\Desktop\Web\CIS310.png" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="Pictures/CIS199.png" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 310: Database Design</span>
                         </a>
