--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
 <div class="work__item">
                         <a href="CIS199.html" class="work__link">
-                            <img src="https://github.com/pcnguy02/pcnguy02.github.io/blob/main/Pictures/CIS199.png" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://raw.githubusercontent.com/pcnguy02/pcnguy02.github.io/refs/heads/main/assets/CIS199.png" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 199: Software Development</span>
                         </a>
