--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <h2 style="font-family:verdana" id="work">Class Work</h2>
 <div class="work__item">
                         <a href="CIS484.html" class="work__link">
-                            <img src="\Users\Patrick\Desktop\Web\CIS484Pic.png" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.xiEB_IOQrJfc0CcBaqEZEQHaDq%26pid%3DApi&f=1&ipt=bb7fd060cd5e4ebe67f8ae4796700babea3eb3440e02563e47e5224bd3ebe5b2&ipo=images" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 484: Digital Forensics</span>
                         </a>
@@ -83,14 +83,14 @@
                     </div>
 <div class="work__item">
                         <a href="CIS199.html" class="work__link">
-                            <img src="https://raw.githubusercontent.com/pcnguy02/pcnguy02.github.io/refs/heads/main/assets/CIS199.png" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freecodecamp.org%2Fnews%2Fcontent%2Fimages%2Fsize%2Fw2000%2F2024%2F03%2Fcsharp2.png&f=1&nofb=1&ipt=0ed6688c5658009a9dfe5f1155e5881156b543f3988c83119073989186751c7f&ipo=images" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 199: Software Development</span>
                         </a>
                     </div>
 <div class="work__item">
                         <a href="CIS480.html" class="work__link">
-                            <img src="https://github.com/pcnguy02/pcnguy02.github.io/blob/main/Pictures/CIS480.png" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhanatech.ca%2Fwp-content%2Fuploads%2F2020%2F06%2FNetwork-Security-2-1024x929.png&f=1&nofb=1&ipt=6cf63372c4e73e3540ff69fa5658538e69cec04f89eb0762700017cf92d19613&ipo=images" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 480: Network Security</span>
                         </a>
@@ -106,7 +106,7 @@
 
 <div class="work__item">
                         <a href="CIS310.html" class="work__link">
-                            <img src="https://github.com/pcnguy02/pcnguy02.github.io/blob/main/Pictures/CIS310.png" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.kWsaBp0ePumEubcYTT9-rQHaEv%26pid%3DApi&f=1&ipt=03fda81e7cade0818b8350ade512fb4220ea41d4a6df03caf7089626fb5d5141&ipo=images" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 310: Database Design</span>
                         </a>
@@ -121,7 +121,7 @@
 
 <div class="work__item">
                         <a href="CIS420.html" class="work__link">
-                            <img src="https://github.com/pcnguy02/pcnguy02.github.io/blob/main/Pictures/CIS420.png" alt="CIS420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.TeKMVJ34gd6fE_aAhN7wKgHaHo%26pid%3DApi&f=1&ipt=85f926fb4d4a7367418233625dc454d0557f52eed9be4c8443b3ea9fadbbdc7f&ipo=images" alt="CIS420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 420: CIS Development Project</span>
                         </a>
@@ -136,7 +136,7 @@
 
 <div class="work__item">
                         <a href="CIS481.html" class="work__link">
-                            <img src="https://github.com/pcnguy02/pcnguy02.github.io/blob/main/Pictures/CIS481.png" alt="CIS481 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.squarespace-cdn.com%2Fcontent%2Fv1%2F5ef07334254666386ed45a91%2F1608262717294-MSU10IM5OR3JH523TK7Y%2FCIA%2BTriad.png&f=1&nofb=1&ipt=2e89283cb7056a45ea2fc65b37ac2f144f4907491c87e6153298eebdc05ca2e6&ipo=images" alt="CIS481 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 481: Information Security</span>
                         </a>
@@ -151,7 +151,7 @@
 
 <div class="work__item">
                         <a href="CIS410.html" class="work__link">
-                            <img src="https://pcnguy02/pcnguy02.github.io/assets/CIS199.png" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.loVuXq4gHRoYVe9AIqyecwHaEK%26pid%3DApi&f=1&ipt=ba40dca5535de403c90277fb8ab523ba5f7a1fe6d0e779e81385a9c7eb6ec271&ipo=images" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 410: Management of Info Systems</span>
                         </a>
