--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <div class="work__item">
                         <a href="CIS410.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=http…3cf8d0aacbb83828dc43e148a9327327eacd78&ipo=images" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="https://raw.githubusercontent.com/pcnguy02/pcnguy02.github.io/refs/heads/main/assets/CIS199.jpg" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 410: Management of Info Systems</span>
                         </a>
