--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <h2 style="font-family:verdana" id="testimonials">Testimonials</h2>
 
-<script src="\Users\Patrick\Desktop\Web\scripts.js"></script>
+<script src="scripts.js"></script>
 </body>
 
 <footer>
