--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
 <div class="work__item">
                         <a href="CIS199.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freecodecamp.org%2Fnews%2Fcontent%2Fimages%2Fsize%2Fw2000%2F2024%2F03%2Fcsharp2.png&f=1&nofb=1&ipt=0ed6688c5658009a9dfe5f1155e5881156b543f3988c83119073989186751c7f&ipo=images" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS199.jpg" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 199: Software Development</span>
                         </a>
