--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <div class="work__item">
                         <a href="CIS310.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.kWsaBp0ePumEubcYTT9-rQHaEv%26pid%3DApi&f=1&ipt=03fda81e7cade0818b8350ade512fb4220ea41d4a6df03caf7089626fb5d5141&ipo=images" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS310.jpg" alt="CIS310 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 310: Database Design</span>
                         </a>
