--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
 <div class="work__item">
                         <a href="CIS480.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhanatech.ca%2Fwp-content%2Fuploads%2F2020%2F06%2FNetwork-Security-2-1024x929.png&f=1&nofb=1&ipt=6cf63372c4e73e3540ff69fa5658538e69cec04f89eb0762700017cf92d19613&ipo=images" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS480.jpg" alt="CIS484 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 480: Network Security</span>
                         </a>
@@ -121,7 +121,7 @@
 
 <div class="work__item">
                         <a href="CIS420.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.TeKMVJ34gd6fE_aAhN7wKgHaHo%26pid%3DApi&f=1&ipt=85f926fb4d4a7367418233625dc454d0557f52eed9be4c8443b3ea9fadbbdc7f&ipo=images" alt="CIS420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS420.jpg" alt="CIS420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 420: CIS Development Project</span>
                         </a>
@@ -136,7 +136,7 @@
 
 <div class="work__item">
                         <a href="CIS481.html" class="work__link">
-                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.squarespace-cdn.com%2Fcontent%2Fv1%2F5ef07334254666386ed45a91%2F1608262717294-MSU10IM5OR3JH523TK7Y%2FCIA%2BTriad.png&f=1&nofb=1&ipt=2e89283cb7056a45ea2fc65b37ac2f144f4907491c87e6153298eebdc05ca2e6&ipo=images" alt="CIS481 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS481.jpg" alt="CIS481 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 481: Information Security</span>
                         </a>
@@ -151,7 +151,7 @@
 
 <div class="work__item">
                         <a href="CIS410.html" class="work__link">
-                            <img src="https://raw.githubusercontent.com/pcnguy02/pcnguy02.github.io/refs/heads/main/assets/CIS199.jpg" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <img src="assets/CIS410.jpg" alt="CIS410 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 410: Management of Info Systems</span>
                         </a>
