--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section id="about" class="about-section">
     <h2>About Me</h2>
     <div class="about-content">
-        <img src="assets/Me.jpg" 
+        <img src="https://raw.githubusercontent.com/pcnguy02/pcnguy02.github.io/refs/heads/main/assets/Me.jpg" 
               alt="LinkedIn Picture">
         <p class="p-padding">
             Hi, I'm Patrick Nguyen. I am an upcoming graduate at the University of Louisville studying Computer Information Systems with a track in Cybersecurity. During my time at UofL, I have participated in various cybersecurity conferences, NCL competitions and CCDC Competitions. All have been fundamental to furthering my career. After graduating, I hope to work my way into network administration and obtain a position in network security.
