--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS480/Assignment%201.pdf" target="_blank">View Assignment 1</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 1.pdf" target="_blank">View Assignment 1</a></li>
             				
 
         			</ul>
