--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         <p class="p-padding">
             Hi, I'm Patrick Nguyen. I am an upcoming graduate at the University of Louisville studying Computer Information Systems with a track in Cybersecurity. During my time at UofL, I have participated in various cybersecurity conferences, NCL competitions and CCDC Competitions. All have been fundamental to furthering my career. After graduating, I hope to work my way into network administration and obtain a position in network security.
         </p>
-<button onclick="window.location.href='assets/pdf/Cover Letter (1).pdf">
-  Cover Letter Example
-</button>
+    <button class="GFG"
+        onclick="window.location.href = 'https://ide.geeksforgeeks.org';">
+        Click Here
+    </button>
 
 
     </div>
