--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
     <button class="GFG"
         onclick="window.location.href = 'assets/pdf/Cover Letter (1).pdf';">
-        Click Here
+        Cover Letter Example
     </button>
 
 
