--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         onclick="window.location.href = 'assets/pdf/Cover Letter (1).pdf';">
         Cover Letter Example
     </button>
+    <button class="GFG"
+        onclick="window.location.href = 'assets/pdf/Patrick Nguyen Resume.pdf';">
+        Resume
+    </button>
 
 
     </div>
