--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="l-header">
 	<div class="topnav">
 	 <a style="font-family:verdana" href="#contactme">Contact Me</a>
-	 <a style="font-family:verdana" href="#testimonials">Testimonials</a>
+	 <a style="font-family:verdana" href="#references">References</a>
 	 <a style="font-family:verdana" href="#work">Class Work</a>
 	 <a style="font-family:verdana" href="#workExp">Work Experience</a>
 	 <a style="font-family:verdana" href="#skills">Skills</a>
@@ -178,8 +178,9 @@
 
 </section>
 
-
-<h2 style="font-family:verdana" id="testimonials">Testimonials</h2>
+<div class="references-container"
+<h2 style="font-family:verdana" id="references">References</h2>
+</div>
 
 <script src="scripts.js"></script>
 </body>
