--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 </section>
 
-<div class="references-container"
+<div class="references-container">
 <h2 style="font-family:verdana" id="references">References</h2>
 </div>
 
