--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
 
 <div class="references-container">
 <h2 style="font-family:verdana" id="references">References</h2>
+<div class="reference_item">
+<p>Trevor Hagel</p>
+</div>
+
 </div>
 
 <script src="scripts.js"></script>
