--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 484: Digital Forensics</span>
                         </a>
+			<div class="file-menu" id="fileMenu1">
+        			<ul>
+            				<li><a href="files/CIS480/Assignment%201.pdf" target="_blank">View Assignment 1</a></li>
+            				
+
+        			</ul>
+    			</div>
 			
                     </div>
 <div class="work__item">
@@ -99,6 +106,13 @@
                             <!-- Text directly below the image -->
                             <span class="work__text">CIS 199: Software Development</span>
                         </a>
+			<div class="file-menu" id="fileMenu1">
+        			<ul>
+            				<li><a href="assets/pdf/CIS 199/Program 2.zip" target="_blank">Program 2 Zip</a></li>
+            				
+
+        			</ul>
+    			</div>
                     </div>
 <div class="work__item">
                         <a href="CIS480.html" class="work__link">
