--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
+            				<li><a href="assets/pdf/CIS 199/Program1.zip" target="_blank">Program 1 Zip</a></li>
             				<li><a href="assets/pdf/CIS 199/Program 2.zip" target="_blank">Program 2 Zip</a></li>
+            				<li><a href="assets/pdf/CIS 199/Program 3.zip" target="_blank">Program 3 Zip</a></li>
+            				<li><a href="assets/pdf/CIS 199/Program 4(1).zip" target="_blank">Program 4 Zip</a></li>
             				
 
         			</ul>
