--- a/index.html
+++ b/index.html
@@ -186,8 +186,10 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS480/Assignment%201.pdf" class="button">View Assignment 1</a></li>
-            				<li><a href="files/project1-file2.pdf" download>Download File 2</a></li>
+            				<li><a href="files/CIS410/Case Study 1" class="button">Case Study 1</a></li>
+            				<li><a href="files/CIS410/Case Study 2" class="button">Case Study 2</a></li>
+            				<li><a href="files/CIS410/Case Study 3" class="button">Case Study 3</a></li>
+
 
         			</ul>
     			</div>
