--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS410/Case Study 1" class="button">Case Study 1</a></li>
-            				<li><a href="files/CIS410/Case Study 2" class="button">Case Study 2</a></li>
-            				<li><a href="files/CIS410/Case Study 3" class="button">Case Study 3</a></li>
+            				<li><a href="assets/pdf/CIS 410Case Study 1" class="button">Case Study 1</a></li>
+            				<li><a href="assets/pdf/CIS 410/Case Study 2" class="button">Case Study 2</a></li>
+            				<li><a href="assets/pdf/CIS 410/Case Study 3" class="button">Case Study 3</a></li>
 
 
         			</ul>
