--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS480/Assignment%201.pdf" target="_blank">View Assignment 1</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 1 Network Utilities Assignment Outcome.pdf" target="_blank">Network Utilities Assignment</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 2 Packet Analysis Outcome.pdf" target="_blank">Packet Analysis Assignment</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 3 Attacks on TCP IP Outcome.pdf" target="_blank">Attacks on TCP</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 4 Linux Firewall Output.pdf" target="_blank">Linux Firewall Assignment</a></li>
+
             				
 
         			</ul>
