--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS480/Assignment%201.pdf" target="_blank">View Assignment 1</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 1 Network Utilities Assignment Outcome.pdf" target="_blank">Network Utilities Assignment</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 2 Packet Analysis Outcome.pdf" target="_blank">Packet Analysis Assignment</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 3 Attacks on TCP IP Outcome.pdf" target="_blank">Attacks on TCP</a></li>
+            				<li><a href="assets/pdf/CIS 480/Assignment 4 Linux Firewall Output.pdf" target="_blank">Linux Firewall Assignment</a></li>
             				
 
         			</ul>
@@ -171,10 +174,11 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="assets/pdf/CIS 480/Assignment 1 Network Utilities Assignment Outcome.pdf" target="_blank">Network Utilities Assignment</a></li>
-            				<li><a href="assets/pdf/CIS 480/Assignment 2 Packet Analysis Outcome.pdf" target="_blank">Packet Analysis Assignment</a></li>
-            				<li><a href="assets/pdf/CIS 480/Assignment 3 Attacks on TCP IP Outcome.pdf" target="_blank">Attacks on TCP</a></li>
-            				<li><a href="assets/pdf/CIS 480/Assignment 4 Linux Firewall Output.pdf" target="_blank">Linux Firewall Assignment</a></li>
+            				<li><a href="assets/pdf/CIS 481/CIS-481-Exercise-2-Team-4.docx.pdf" target="_blank">Team Exercise 2</a></li>
+            				<li><a href="assets/pdf/CIS 481/CIS-481-Exercise-3-Team-4.docx.pdf" target="_blank">Team Exercise 3</a></li>
+            				<li><a href="assets/pdf/CIS 481/CIS-481-Exercise-6-Team-4.docx.pdf" target="_blank">Team Exercise 6</a></li>
+            				<li><a href="assets/pdf/CIS 481/Evolution of Social Engineering Attacks and Prevention.pdf" target="_blank">Final Paper 481</a></li>
+
 
             				
 
