--- a/index.html
+++ b/index.html
@@ -152,14 +152,16 @@
 </div>
 
 <div class="work__item">
-                        <a href="CIS420.html" class="work__link">
-                            <img src="assets/CIS420.jpg" alt="CIS420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                        <a href="CIS320.html" class="work__link">
+                            <img src="assets/CIS420.jpg" alt="CI3420 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
-                            <span class="work__text">CIS 420: CIS Development Project</span>
+                            <span class="work__text">CIS 320: System Analysis and Design</span>
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="files/CIS480/Assignment%201.pdf" target="_blank">View Assignment 1</a></li>
+            				<li><a href="assets/pdf/CIS 320/Assignment 3.pdf" target="_blank">View Assignment 3</a></li>
+            				<li><a href="assets/pdf/CIS 320/Elaboration Spec.docx" target="_blank">Elaboration Specification</a></li>
+            				<li><a href="assets/pdf/CIS 320/Iteration+#5.pdf" target="_blank">Last Iteration of Project</a></li>
             				
 
         			</ul>
