--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         			<ul>
             				<li><a href="assets/pdf/CIS 320/Assignment 3.pdf" target="_blank">View Assignment 3</a></li>
             				<li><a href="assets/pdf/CIS 320/Elaboration Spec.docx" target="_blank">Elaboration Specification</a></li>
-            				<li><a href="assets/pdf/CIS 320/Iteration+#5.pdf" target="_blank">Last Iteration of Project</a></li>
+            				<li><a href="assets/pdf/CIS 320/Iteration 5.pdf" target="_blank">Last Iteration of Project</a></li>
             				
 
         			</ul>
