--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="assets/pdf/CIS 480/Assignment 1.pdf" target="_blank">View Assignment 1</a></li>
+            				<li><a href="assets/pdf/CIS 310/ICE 1.zip" target="_blank">ICE 1</a></li>
+            				<li><a href="assets/pdf/CIS 310/ICE 2.zip" target="_blank">ICE 2</a></li>
+            				<li><a href="assets/pdf/CIS 310/SQLA1.zip" target="_blank">SQLA 1</a></li>
+            				<li><a href="assets/pdf/CIS 310/SQLA2.zip" target="_blank">SQLA 2</a></li>
+            				<li><a href="assets/pdf/CIS 310/SQLA4.zip" target="_blank">SQLA 4</a></li>
+
             				
 
         			</ul>
