--- a/index.html
+++ b/index.html
@@ -174,6 +174,23 @@
 </div>
 
 <div class="work__item">
+                        <a href="CIS420.html" class="work__link">
+                            <img src="assets/CIS420.jpg" alt="CI320 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <!-- Text directly below the image -->
+                            <span class="work__text">CIS 420: CIS Development Project</span>
+                        </a>
+			<div class="file-menu" id="fileMenu1">
+        			<ul>
+            				<li><a href="assets/pdf/CIS 420/ScrumdogMillionairePMP.docx" target="_blank">ScrumdogMillionairePMP</a></li>
+            				<li><a href="assets/pdf/CIS 420/Screenshots of Website Dev.docx" target="_blank">Website Screenshots</a></li>
+            				<li><a href="assets/pdf/CIS 420/ScrumdogsRTM_completed.xlsx" target="_blank">Scrumdogs RTM</a></li>
+            				
+
+        			</ul>
+    			</div>
+</div>
+
+<div class="work__item">
                         <a href="CIS481.html" class="work__link">
                             <img src="assets/CIS481.jpg" alt="CIS481 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
