--- a/index.html
+++ b/index.html
@@ -215,13 +215,30 @@
 
 </section>
 
-<div class="references-container">
-<h2 style="font-family:verdana" id="references">References</h2>
-<div class="reference_item">
-<p>Trevor Hagel</p>
-</div>
+<section id="references" class="references-section">
+    <h2>References</h2>
+    <div class="references-container">
+        <div class="reference-card">
+            <h3>John Doe</h3>
+            <p>Senior Network Administrator, Tech Solutions</p>
+            <p>Email: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
+            <p>Phone: (123) 456-7890</p>
+        </div>
+        <div class="reference-card">
+            <h3>Jane Smith</h3>
+            <p>Professor, University of Louisville</p>
+            <p>Email: <a href="mailto:janesmith@louisville.edu">janesmith@louisville.edu</a></p>
+            <p>Phone: (987) 654-3210</p>
+        </div>
+        <div class="reference-card">
+            <h3>Mark Johnson</h3>
+            <p>IT Manager, Hall Contracting of KY</p>
+            <p>Email: <a href="mailto:markjohnson@hallcontracting.com">markjohnson@hallcontracting.com</a></p>
+            <p>Phone: (555) 123-4567</p>
+        </div>
+    </div>
+</section>
 
-</div>
 
 <script src="scripts.js"></script>
 </body>
