--- a/index.html
+++ b/index.html
@@ -219,22 +219,21 @@
     <h2>References</h2>
     <div class="references-container">
         <div class="reference-card">
-            <h3>John Doe</h3>
-            <p>Senior Network Administrator, Tech Solutions</p>
-            <p>Email: <a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
-            <p>Phone: (123) 456-7890</p>
-        </div>
-        <div class="reference-card">
-            <h3>Jane Smith</h3>
-            <p>Professor, University of Louisville</p>
-            <p>Email: <a href="mailto:janesmith@louisville.edu">janesmith@louisville.edu</a></p>
-            <p>Phone: (987) 654-3210</p>
-        </div>
-        <div class="reference-card">
-            <h3>Mark Johnson</h3>
+            <h3>Tyler Vittitoe</h3>
             <p>IT Manager, Hall Contracting of KY</p>
-            <p>Email: <a href="mailto:markjohnson@hallcontracting.com">markjohnson@hallcontracting.com</a></p>
-            <p>Phone: (555) 123-4567</p>
+            <p>Email: <a href="mailto:tvittitoe@hallky.com">tvittitoe@hallky.com</a></p>
+            <p>Phone: 502-367-6151</p>
+        </div>
+        <div class="reference-card">
+            <h3>Matthew Nelson</h3>
+            <p>Professor of Clarinet, University of Louisville</p>
+            <p>Email: <a href="mailto:mpnels01@louisville.edu">mpnels01@louisville.edu</a></p>
+        </div>
+        <div class="reference-card">
+            <h3>Trevor Hagel</h3>
+            <p>IT Tech Support II, University of Louisville Campus Housing</p>
+            <p>Email: <a href="mailto:trevor.hagel@louisville.edu">trevor.hagel@louisville.edu</a></p>
+            <p>Phone:  502-852-6636</p>
         </div>
     </div>
 </section>
