--- a/index.html
+++ b/index.html
@@ -81,7 +81,52 @@
   </div>
 </section>
 
-<h2 style="font-family:verdana" id="skills">Skills</h2>
+<section class="skills-section">
+  <h2>Skills</h2>
+  <div class="skills-container">
+    <div class="skill-card">
+      <h3>Certifications</h3>
+      <ul>
+        <li>Microsoft Excel (March 2022)</li>
+        <li>ISC2 Certified in Cybersecurity (August 2023)</li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3>Languages</h3>
+      <ul>
+        <li>C#</li>
+        <li>HTML and CSS</li>
+        <li>SQL</li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3>Microsoft Office Suite</h3>
+      <ul>
+        <li>Excel</li>
+        <li>Access</li>
+        <li>PowerPoint</li>
+        <li>Outlook</li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3>Operating Systems</h3>
+      <ul>
+        <li>Windows</li>
+        <li>Linux</li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3>Badges</h3>
+      <ul>
+        <li>IBM Cybersecurity Fundamentals (February 2023)</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 <section id="work" class="class-section">
 <h2 style="font-family:verdana" id="work">Class Work</h2>
