--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <footer>
     <div class="footer-content">
         <div class="social-icons">
-            <a href="https://facebook.com" target="https://www.facebook.com/patrick.nguyen.9210/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/patrick.nguyen.9210/" target="_blank"><i class="fab fa-facebook-f"></i></a>
            
         </div>
     </div>
