--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <div class="footer-content">
         <div class="social-icons">
             <a href="https://www.facebook.com/patrick.nguyen.9210/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://github.com/pcnguy02" target="_blank"><i class="fab fa-github"></i></a>
            
         </div>
     </div>
