--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
         <div class="social-icons">
             <a href="https://www.facebook.com/patrick.nguyen.9210/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://github.com/pcnguy02" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/pcnguy02/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
            
         </div>
     </div>
