--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
     <div class="skill-card">
       <h3>Certifications</h3>
       <ul>
+	<li>CompTIA Sec + - in progress</li>
+	<li>ISC2 Certified in Cybersecurity (August 2023)</li>
         <li>Microsoft Excel (March 2022)</li>
-        <li>ISC2 Certified in Cybersecurity (August 2023)</li>
       </ul>
     </div>
 
