--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
 <h2 style="font-family:verdana" id="work">Class Work</h2>
 
 <div class="work__item">
+                        <a href="CIS150.html" class="work__link">
+                            <img src="assets/CIS150.png" alt="CIS150 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                            <!-- Text directly below the image -->
+                            <span class="work__text">CIS 150: Fundamentals of Info. Systems</span>
+                        </a>
+			<div class="file-menu" id="fileMenu1">
+        			<ul>
+            				<li><a href="assets/pdf/CIS 150 Info .pdf" target="_blank">Class Information</a></li>
+            				
+
+        			</ul>
+    			</div>
+                    </div>
+	
+<div class="work__item">
                         <a href="CIS199.html" class="work__link">
                             <img src="assets/CIS199.jpg" alt="CIS199 Pic" class="work__img" data-sr-id="20" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: transform 0.3s, opacity 2s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
                             <!-- Text directly below the image -->
