--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <h3>IT Intern <span>@ Hall Contracting of KY</span></h3>
     <p><em>June 2024 – Present</em></p>
     <ul>
-      <li>Conducted audits of all user devices, ensuring software and OS has been updated.</li>
-      <li>Built monitoring scripts in Python to detect system issues and notify via SMS, including RPi overheating, UPS outages, and lost connectivity.</li>
-      <li>Assisted in Onboarding System transitions for new employees.</li>
+      <li>Conducted audits of all user desktops/laptops, ensuring software and OS are updated and BitLocker is enabled for encryption.</li>
+      <li>Built monitoring Python scripts on a Raspberry Pi to detect system issues and notify via SMS, including thermal throttling, UPS outages, and lost connectivity.</li>
+      <li>Performed document migration between employee onboarding systems to support data automation and improve data accessibility.</li>
     </ul>
   </div>
 
@@ -63,8 +63,8 @@
     <p><em>April 2023 – June 2024</em></p>
     <ul>
       <li>Conducted monthly backups for faculty members.</li>
-      <li>Oversaw maintenance and support of technology for 10 distinct residence halls.</li>
-      <li>Maintained keycard access for students and faculty to ensure physical security of resident halls.</li>
+      <li>Assisted with desktop support for 10 distinct residence halls.</li>
+      <li>Managed and monitored keycard access using Lenel OnGuard, assigning students and faculty permissions, and supporting residence hall security.</li>
     </ul>
   </div>
 
@@ -96,7 +96,9 @@
       <h3>Languages</h3>
       <ul>
         <li>C#</li>
-        <li>HTML and CSS</li>
+	<li>Python</li>
+	<li>C</li>
+        <li>HTML, CSS, and JavaScript</li>
         <li>SQL</li>
       </ul>
     </div>
