--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </a>
 			<div class="file-menu" id="fileMenu1">
         			<ul>
-            				<li><a href="assets/pdf/CIS 150 Info .pdf" target="_blank">Class Information</a></li>
+            				<li><a href="assets/pdf/CIS 150 Info.pdf.pdf" target="_blank">Class Information</a></li>
             				
 
         			</ul>
